# skillgoid-plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: custom-adapter-template.md  roadmap.md
hooks/: detect-resume.sh  gate-guard.sh  hooks.json
schemas/: chunks.schema.json  criteria.schema.json  iterations.schema.json
scripts/: blueprint_slice.py  chunk_topo.py  diff_summary.py  explain_chunk.py  git_iter_commit.py  integration_suspect.py  measure_python.py  metrics_append.py  stall_check.py  stats_reader.py  status_reader.py  validate_iteration.py  vault_filter.py  verify_iteration_written.py
tests/: test_auto_retrospect_trigger.py  test_blueprint_slice.py  test_build_skill.py  test_chunk_topo.py  test_clarify_skill.py  test_context7_fetcher_prompt.py  test_coverage_gate.py  test_criteria_schema.py  test_detect_resume.py  test_diff_summary.py  test_env_gate.py  test_explain_chunk.py  test_gate_guard.py  test_gate_overrides.py  test_git_iter_commit.py  test_ground.py  test_ground_analogue.py  test_integration.py  test_integration_gate_flow.py  test_integration_retry_fixture.py  test_integration_suspect.py  test_measure_python.py  (+22 more)
tests/fixtures/synthesize/mini-flask-demo/: pyproject.toml
tests/fixtures/synthesize/mini-flask-demo/.github/workflows/: ci.yml  test.yml
tests/fixtures/synthesize/mini-flask-demo/scripts/: test
tests/fixtures/synthesize/mini-flask-demo/src/miniflask/: __init__.py  app.py
tests/fixtures/synthesize/mini-flask-demo/tests/: test_app.py
(+82 files in other folders)
