[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "skillgoid-helpers"
version = "0.0.1"
description = "Helper scripts for the Skillgoid Claude Code plugin"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["T201"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/**" = ["T201", "F401", "E"]
