[project]
name = "miniflask"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["flask"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = false

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 100
